[package]
name = "solend-liquidator-collector"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "2.2.1"
solana-sdk = "2.2.1"
solana-program = "2.2.1"
solana-transaction-status = "2.2.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
bs58 = "0.5"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
bincode = "1.3"
toml = "0.8"
